--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=user-service
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/user?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/ecommerce?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
