--- a/user-service/src/test/resources/application-test.properties
+++ b/user-service/src/test/resources/application-test.properties
@@ -1,10 +1,10 @@
-spring.application.name=order-service
+spring.application.name=flight-search-api
 
-
-spring.datasource.url=jdbc:mariadb://localhost:3306/ecommerce?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:h2:mem:public
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
+
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
@@ -17,10 +17,4 @@ spring.jpa.open-in-view=false
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-
-
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.template.default-topic: order
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
