--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>common-lib</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.12.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
