--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=user-service
 
+server.port=8084
 spring.datasource.url=jdbc:mariadb://localhost:3306/ecommerce?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
@@ -17,4 +18,7 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+spring.security.user.name=berna
+spring.security.user.password=berna
 
