--- a/charts/user-service/templates/configmap.yaml
+++ b/charts/user-service/templates/configmap.yaml
@@ -1,20 +1,44 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "spring-boot-app.fullname" . }}-config
+  name: {{ include "user-service.fullname" . }}-config
 data:
   application.yaml: |
     spring:
+      application:
+        name: {{ .Release.Name }}
       datasource:
-        url: {{ .Values.spring.datasource.url }}
-        username: {{ .Values.spring.datasource.username }}
+        url: jdbc:{{ .Values.database.type }}://{{ .Values.database.address }}/ecommerce?createDatabaseIfNotExist=true
+        username: {{ .Values.database.username }}
+        password: {{ .Values.database.password }}
+        driver-class-name: org.mariadb.jdbc.Driver
+
       jpa:
+        show-sql: true
         hibernate:
-          ddl-auto: {{ .Values.spring.jpa.hibernate.ddl-auto }}
-      kafka:
-        bootstrap-servers: {{ .Values.spring.kafka.bootstrap-servers }}
-    app:
-      logLevel: {{ .Values.app.logLevel }}
-      feature:
-        featureA: {{ .Values.app.feature.featureA }}
-        featureB: {{ .Values.app.feature.featureB }}
+          ddl-auto: update
+          naming:
+            implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+        properties:
+          hibernate:
+            dialect: org.hibernate.dialect.MariaDBDialect
+        open-in-view: false
+
+      security:
+        user:
+          name: berna
+          password: berna
+
+    server:
+      port: {{ .Values.service.port }}
+    management:
+    endpoint:
+      health:
+        probes:
+          enabled: true
+    health:
+      livenessState:
+        enabled: true
+      readinessState:
+        enabled: true
+
