--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ spring:
     name: user-service
 
   datasource:
-    url: jdbc:mariadb://localhost:3306/ecommerce?createDatabaseIfNotExist=true
+    url: jdbc:mariadb://192.168.1.51:30036/ecommerce?createDatabaseIfNotExist=true
     username: root
-    password: root
+    password: 12345Wq!
     driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
@@ -26,3 +26,17 @@ spring:
 
 server:
   port: 8084
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
+
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
+
+
+
