--- a/charts/inventory-service/templates/configmap.yaml
+++ b/charts/inventory-service/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "order-service.fullname" . }}-config
+  name: {{ include "inventory-service.fullname" . }}-config
 data:
   application.yaml: |
     spring:
@@ -29,24 +29,14 @@ data:
         bootstrap-servers: {{ .Values.kafka.address }}
         topic:
           order: {{ .Values.kafka.topic.name }}
-        producer:
-          key-serializer: org.apache.kafka.common.serialization.StringSerializer
-          value-serializer: org.apache.kafka.common.serialization.StringSerializer
-
-    management:
-      endpoints:
-        web:
-          exposure:
-            include: "health"
-      endpoint:
-        health:
-          probes:
-            enabled: true
-      health:
-        livenessState:
-          enabled: true
-        readinessState:
-          enabled: true
+        consumer:
+          group-id: {{ .Values.kafka.consumer.groupid }}
+          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+          value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
     server:
       port: {{ .Values.service.port }}
+
+    generate:
+      test:
+        data: true
