--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -82,6 +82,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.12.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>3.4.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
